--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,5 @@
 project:
-  title: "Access and Adaptation in Maine's Marine Fisheries"
+  title: "Species Landings by Ports"
 editor: visual
 format: 
   html:
